# bpmn-robots-architecture

./: .gitignore
architecture/: CMakeLists.txt  package.xml
architecture_msgs/: CMakeLists.txt  package.xml
architecture_msgs/msg/: Behavior.msg  Resource.msg  Robot.msg  Role.msg  TopicRemap.msg
architecture_msgs/srv/: BehaviorStatus.srv  ClearManager.srv  ModifyRobots.srv  ResourceRequest.srv
behavior_listener/: CMakeLists.txt  README.md  ReadmeTemplate.md  package.xml
behavior_listener/src/: behavior_listener_node.py  bpmn.py
behavior_manager/: CMakeLists.txt  package.xml
behavior_manager/include/behavior_manager/: behavior_manager.hpp  behavior_pool.hpp  monitored_resource.hpp  monitored_role.hpp  resource_pool.hpp
behavior_manager/launch/: behavior_pool.launch  test_monitored_resource.launch  test_monitored_role.launch  test_resource_pool.launch
behavior_manager/src/: monitored_resource.cpp  monitored_role.cpp  resource_pool.cpp
behavior_manager/test/: test_monitored_resource.cpp  test_monitored_role.cpp  test_resource_pool.cpp
bpmn_interface/: CMakeLists.txt  package.xml
bpmn_interface/include/bpmn_interface/: bpmn_interface.hpp  error_handler.hpp  message_handler.hpp  process_variable.hpp  task_lock.hpp
bpmn_interface/launch/: test_error_handler.launch  test_message_handler.launch  test_process_variable.launch  test_task_lock.launch
bpmn_interface/src/: message_handler.cpp
bpmn_interface/test/: test_error_handler.cpp  test_message_handler.cpp  test_process_variable.cpp  test_task_lock.cpp
camunda_c_api/: CMakeLists.txt  package.xml
camunda_c_api/include/camunda_c_api/: bpmn_error.hpp  bpmn_exception.hpp  camunda_c_api.hpp  camunda_error.hpp  camunda_exception.hpp  complete_request.hpp  extend_lock.hpp  json.hpp  json_print.hpp  lock_request.hpp  lock_response.hpp  throw_signal.hpp  topics.hpp  variables.hpp
camunda_c_api/launch/: test_bpmn_error.launch  test_bpmn_exception.launch  test_camunda_error.launch  test_camunda_exception.launch  test_complete_request.launch  test_error_handler.launch  test_extend_lock.launch  test_json.launch  test_lock_request.launch  test_lock_response.launch  test_print_json.launch  test_throw_signal.launch  test_topics.launch  test_variables.launch
camunda_c_api/src/: bpmn_error.cpp  bpmn_exception.cpp  camunda_error.cpp  camunda_exception.cpp  complete_request.cpp  extend_lock.cpp  json.cpp  json_print.cpp  lock_request.cpp  lock_response.cpp  throw_signal.cpp  topics.cpp  variables.cpp
camunda_c_api/test/: test_bpmn_error.cpp  test_bpmn_exception.cpp  test_camunda_error.cpp  test_camunda_exception.cpp  test_complete_request.cpp  test_error_handler.cpp  test_extend_lock.cpp  test_json.cpp  test_lock_request.cpp  test_lock_response.cpp  test_print_json.cpp  test_throw_signal.cpp  test_topics.cpp  test_variables.cpp
message_manager/: CMakeLists.txt  package.xml
message_manager/config/: message_manager.json  template.json
message_manager/include/message_manager/: message_manager.hpp
message_manager/launch/: message_manager.launch
message_manager/src/: message_manager.cpp  message_manager_node.cpp
resource_manager/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
resource_manager/config/: robot.py  server.py  test_behaviors.config
resource_manager/launch/: resource_manager.launch  resource_manager_sga.launch  resource_manager_simple.launch  test.launch  test_sga.launch  test_simple.launch
resource_manager/src/: resource_helpers.py  resource_manager_base.py  resources.yaml  test.py
resource_manager/src/resource_manager/: agent_base.py  random_point_node.py  resource_helpers.py  resource_manager_base.py  resource_manager_node.py  resource_manager_sga.py  resources.yaml  role_base.py  test.py
resource_manager/test/: test_ros_resource_manager_sga.test  test_ros_resource_manager_simple.test
resource_manager/test/behaviors/: test_behaviors2.config
resource_manager/test/nodes/: resource_manager_sga_test_node.py  resource_manager_simple_test_node.py
resource_manager/test/tests/: test_resource_manager_sga.py  test_resource_manager_simple.py  test_ros_resource_manager_SGA.py  test_ros_resource_manager_simple.py
thread_pool/: CMakeLists.txt  package.xml
thread_pool/config/: template.json
thread_pool/include/thread_pool/: data_objects.hpp  thread_pool.hpp
thread_pool/launch/: template.launch  thread_pool.launch
thread_pool/src/: data_objects.cpp  thread_pool.cpp  thread_pool_node.cpp
