<?xml version="1.0"?>
<package format="2">
  <name>architecture</name>
  <version>0.0.0</version>
  <description>The architecture package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
