<?xml version="1.0"?>
<package format="2">
  <name>architecture_msgs</name>
  <version>0.0.0</version>
  <description>The architecture_msgs package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export></export>
</package>
