<?xml version="1.0"?>
<package format="2">
  <name>behavior_manager</name>
  <version>0.0.0</version>
  <description>The behavior_manager package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Camunda API -->
    <depend>camunda_c_api</depend>
  <!-- BPMN API -->
    <depend>bpmn_interface</depend>
  <!-- Architecture Packages -->
    <depend>architecture_msgs</depend>
  <!-- ROS Packages -->
    <depend>roscpp</depend>
    <depend>message_runtime</depend>

  <export></export>
</package>
