<?xml version="1.0"?>
<package format="2">
  <name>bpmn_interface</name>
  <version>0.0.0</version>
  <description>The bpmn_interface package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>camunda_c_api</depend>

  <export></export>
</package>
