<?xml version="1.0"?>
<package format="2">
  <name>camunda_c_api</name>
  <version>0.0.0</version>
  <description>The camunda_c_api package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
