<?xml version="1.0"?>
<package format="2">
  <name>message_manager</name>
  <version>0.0.0</version>
  <description>The massage_manager package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>launcher_helpers</depend>
  <depend>bpmn_interface</depend>
  <depend>camunda_c_api</depend>
  <depend>architecture_msgs</depend>

  <export></export>
</package>
