<?xml version="1.0"?>
<package format="2">
  <name>thread_pool</name>
  <version>0.0.0</version>
  <description>The master_thread_pool package</description>
  <maintainer email="james@todo.todo">james</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>architecture_msgs</depend>
  <depend>node_server_msgs</depend>
  <depend>launcher_helpers</depend>

  <export></export>
</package>
